# sdk-js

./: .editorconfig  .eslintignore  .eslintrc  .eslintrc.compat.yml  .eslintrc.typescript.yml  .eslintrc.yml  .flake8  .flowconfig  .gitignore  .gitlab-ci.yml  .travis.yml  Pipfile  README.md  azure-pipelines.yml  jsconfig.json  lint.sh  mypy.ini  package-lock.json  package.json  pyproject.toml  run-ci.py  setup.py  tbump.toml  tsconfig.json
.github/: issue_template.md
.github/workflows/: tests.yaml  tests.yml
ci/: check.py  deploy.py  keep-safari-awake.sh  mirror.py  runserver.bat  utils.py
ci/compat/: .eslintrc.yml  conftest.py  package.json  test_upgrade.py  versions.yml
ci/compat/tests/: .gitignore
ci/pyback/: __init__.py  client.py  server.py
config/: babel.config-eslint.js  babel.config.js  babel.require-hook.js  babel.require-no-alias-hook.js  babel.setup.js  rollup-plugin-copy-edit.js  rollup.config.js  tanker.test.config.js  tsconfig.base.json  tsconfig.browser.json  tsconfig.es.dom.json  tsconfig.es.json  tsconfig.es.web.json  tsconfig.karma.json  tsconfig.lint.json  tsconfig.node.dom.json  tsconfig.node.json  tsconfig.node.web.json  tsconfig.tests.json  webpack.config.base.js
config/compat/: ie11.js
config/karma/: karma.config.base.js  karma.config.benchmark.js  karma.config.ci.js  karma.config.debug.js  karma.webpack.config.js  launchers.js  tanker.test.config.js
config/mocha/: name-exporter.js
config/tests/: babel.setup.js
src/@types/: pouchdb-errors.d.ts
src/flow/: mocha.js  webpack.js
src/typescript/dumb-reducer/: index.d.ts
src/typescript/test-utils/: index.d.ts
upgrade/: conftest.py  test_upgrade.py  versions.yml
upgrade/tests/: babel.conf.js  encrypt.js  encrypt_18.js  group.js  group_18.js  helpers.js  package.in.json  unlock.js  unlock_18.js
