[tool.poetry]
name = "tanker-js-sdk"
version = "0.1.0"
description = "Tanker Javascript client"
authors = ["Tanker team"]

[tool.poetry.dependencies]
python = "^3.8"

tankerci = { version = ">= 2022.12.4584", source = "gitlab" }

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "4.0.1"
flake8-comprehensions = "3.10.0"
isort = "5.10.1"
mypy = "0.961"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
